# qtip

./: .gitignore  QTIP.sln  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  regime-ci.yml  regime-csharp-ci.yml  security.yml
qtip/: __init__.py  regime_classifier_v2.py
src/RegimeClassifier/: FeatureMatrix.cs  GaussianHmm.cs  QTIP.RegimeClassifier.csproj  Regime.cs  RegimeClassifierV2.cs  RegimeConfig.cs
tests/: test_regime_classifier_v2.py
tests/csharp/: QTIP.RegimeClassifier.Tests.csproj  RegimeClassifierTests.cs
